# Rust-MessagingApplication

./: README.md
G65-main/: Cargo.toml  README.md  server_cpu_log.txt
G65-main/client/: Cargo.toml
G65-main/client/src/: app.rs  main.rs  net.rs
G65-main/client/src/views/: chat_list.rs  group_chat.rs  home.rs  login.rs  mod.rs  private_chat.rs  register.rs
G65-main/doc/: manuale_del_progettista.md  manuale_utente.md
G65-main/server/: Cargo.toml  server_cpu_log.txt
G65-main/server/src/: auth.rs  errors.rs  handlers.rs  main.rs  net.rs  storage.rs
G65-main/server/src/monitoring/: monitoring.rs
G65-main/server/tests/: README.md  e2e_functionals.rs  e2e_private_chat.rs  e2e_private_chat_monitoring.rs  e2e_stress_tests.rs
G65-main/server/tests/results/: e2e_private_chat_monitoring_res.txt  e2e_private_chat_res.txt
G65-main/shared/: Cargo.toml
G65-main/shared/src/: lib.rs
