[workspace]
members = ["client", "server", "shared"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = "1"
tokio-util = "0.7"
futures-util = "0.3"
serde = "1"
serde_json = "1"
uuid = "1"
anyhow = "1"
eframe = "0.27"
egui = "0.27"
rusqlite = "0.31"
argon2 = "0.5"
rand = "0.8"
thiserror = "1"

# --- AGGIUNTE PER RISOLVERE IL CONFLITTO ---
# Usiamo la 0.30 per compatibilità con i tuoi test e aggiorniamo il monitoring
sysinfo = "0.30"
chrono = "0.4"