[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync"] }
tokio-util = { workspace = true, features = ["codec"] }
futures-util = { workspace = true, features = ["sink"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }

# GUI
eframe = { workspace = true }
egui = { workspace = true }

# crate condiviso
shared = { path = "../shared" }
